Buttons all have listeners but do not yet work properly with each other

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
   <div id="calculator">
-    <div id="screen"></div>
+    <div id="screen">
+      <h2 id="displayNum"></h2>
+    </div>
     <div id="buttons">
-      <button class="wide" id="clear">Clear</button>
-      <button class="wide" id="equals">=</button>
     </div>
   </div>
 </body>
