Added expression display. Not programmed

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <div id="calculator">
     <div id="screen">
+      <p id="displayExpression"></p>
       <h2 id="displayNum"></h2>
     </div>
     <div id="buttons">
