Almost done. Last step to do is allow for chaining of operations

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div id="calculator">
     <div id="screen">
       <p id="displayExpression"></p>
-      <h2 id="displayNum"></h2>
+      <h2 id="displayNum">0</h2>
     </div>
     <div id="buttons">
     </div>
